@@ -6923,8 +6923,9 @@ static int mark5_format_vlba_make_formatname(struct mark5_stream *ms)
 
 	f = (struct mark5_format_vlba *)(ms->formatdata);
 	
-	sprintf(ms->formatname, "VLBA1_%d-%d-%d-%d/%d",
-		f->fanout, ms->Mbps, ms->nchan, ms->nbit, ms->decimation);
+	snprintf(ms->formatname, MARK5_STREAM_ID_LENGTH,
+		"VLBA1_%d-%d-%d-%d/%d", f->fanout, ms->Mbps, ms->nchan, 
+		ms->nbit, ms->decimation);
 
 	return 0;
 }
